# Copyright 2026 Michele Borassi
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Usage:
# - For standard use-cases, copy installers/to run Sensei in your HTML page,

# Create the WASM executable using ONLY the bindings file
add_executable(wasm_bindings wasm_bindings.cpp)

# Link the pure C++ logic to the bindings
target_link_libraries(
        wasm_bindings
        ui
)

# Output JS/WASM and enable Embind
set_target_properties(wasm_bindings PROPERTIES SUFFIX ".js")

# Apply optimizations during LINKING
# Note: We apply optimizations during building inside engine/CMakeLists.txt.
target_link_options(wasm_bindings PRIVATE
        "-lembind"
        "-O3"
        "-flto"
        "-pthread"
        "--no-entry"
        "-sINITIAL_MEMORY=2147483648"   # 2GB
        "--preload-file" "${CMAKE_CURRENT_SOURCE_DIR}/../../assets@/assets"
)

# Define the destination directory relative to the wasm/ folder.
set(INSTALLER_WASM_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../installers/wasm")

# Automatically copy all necessary files after a successful build to installers/wasm
add_custom_command(TARGET wasm_bindings POST_BUILD
        # 1. Ensure the destination directory exists
        COMMAND ${CMAKE_COMMAND} -E make_directory ${INSTALLER_WASM_DIR}

        # 2. Copy the generated WebAssembly artifacts
        # (The .data file is generated by the --preload-file flag)
        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE_DIR:wasm_bindings>/wasm_bindings.js ${INSTALLER_WASM_DIR}/
        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE_DIR:wasm_bindings>/wasm_bindings.wasm ${INSTALLER_WASM_DIR}/
        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE_DIR:wasm_bindings>/wasm_bindings.data ${INSTALLER_WASM_DIR}/

        COMMENT "Copying WASM build artifacts to installers/wasm/"
)